--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ hs_err_pid*
 /nbproject/
 /src/test/resources/HotelDBCreate.sql
 /src/main/resources/db.properties
+/src/main/webapp/WEB-INF/glassfish-resources.xml
