--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,36 @@
 	 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	 xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
 	 version="3.1">
+    <servlet>
+        <servlet-name>jersey-serlvet</servlet-name>
+        <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
+        <init-param>
+            <param-name>javax.ws.rs.Application</param-name>
+            <param-value>com.mykolabs.resource.ApplicationConfig</param-value>
+        </init-param>
+        <!-- Register resources and providers under my.package. -->
+        <init-param>
+            <param-name>jersey.config.server.provider.packages</param-name>
+            <param-value>com.mykolabs.resource;com.mykolabs.authentication;com.mykolabs.mappers;</param-value>
+        </init-param>
+        <!-- Register my custom provider (not needed if it's in my.package) -->
+        <init-param>
+            <param-name>jersey.config.server.provider.classnames</param-name>
+            <param-value>com.mykolabs.authentication.AuthenticationFilter;
+                com.mykolabs.mappers.AuthenticationExceptionMapper;
+                com.mykolabs.mappers.GeneralExceptionMapper;
+                com.mykolabs.mappers.EntityNotFoundMapper;
+            </param-value>
+        </init-param>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+   
+    <servlet-mapping>
+        <servlet-name>jersey-serlvet</servlet-name>
+        <url-pattern>/webresources/*</url-pattern>
+    </servlet-mapping>
+    
+    <!-- In minutes, how long session objects will remain in server memory -->
     <session-config>
         <session-timeout>
             30
