--- a/pom.xml
+++ b/pom.xml
@@ -284,7 +284,7 @@
                     <webResources>
                         <resource>
                             <!-- this is relative to the pom.xml directory -->
-                            <directory>src/main/setup</directory>
+                            <directory>src/main/webapp</directory>
                             <targetPath>WEB-INF</targetPath>
                         </resource>
                     </webResources>
